# CxxRust

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md
cmake/: rust.cmake
cxx/: CMakeLists.txt  CxxRust_en_US.ts  main.cpp  mainwidget.cpp  mainwidget.h
rust/: CMakeLists.txt
rust/basic/: Cargo.toml
rust/basic/src/: lib.rs
rust/second/: Cargo.toml
rust/second/src/: lib.rs  parse_xml.rs
rust/works/: Cargo.toml
rust/works/bar/: Cargo.toml  build.rs
rust/works/bar/src/: lib.rs  mystruct.rs
rust/works/common/src/: lib.rs
rust/works/foo/: Cargo.toml
rust/works/foo/src/: lib.rs
